add tests books and categories