@@ -1,5 +1,8 @@
 package org.example.springintro.controller;
 
+import static org.junit.jupiter.api.Assertions.assertEquals;
+import static org.junit.jupiter.api.Assertions.assertNotNull;
+import static org.junit.jupiter.api.Assertions.assertTrue;
 import static org.mockito.Mockito.when;
 import static org.springframework.security.test.web.servlet.setup.SecurityMockMvcConfigurers.springSecurity;
 import static org.springframework.test.web.servlet.request.MockMvcRequestBuilders.delete;
@@ -8,25 +11,25 @@ import static org.springframework.test.web.servlet.request.MockMvcRequestBuilder
 import static org.springframework.test.web.servlet.request.MockMvcRequestBuilders.put;
 import static org.springframework.test.web.servlet.result.MockMvcResultMatchers.status;
 
+import com.fasterxml.jackson.core.type.TypeReference;
 import com.fasterxml.jackson.databind.ObjectMapper;
 import jakarta.transaction.Transactional;
 import java.math.BigDecimal;
 import java.sql.Connection;
 import java.sql.SQLException;
-import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.Collections;
-import java.util.HashSet;
 import java.util.List;
 import javax.sql.DataSource;
 import lombok.SneakyThrows;
 import org.example.springintro.dto.book.BookDto;
+import org.example.springintro.dto.book.BookDtoWithoutCategoryIds;
 import org.example.springintro.dto.book.CreateBookRequestDto;
 import org.example.springintro.model.Book;
 import org.example.springintro.model.Category;
 import org.example.springintro.services.BookService;
+import org.example.springintro.util.TestUtils;
 import org.junit.jupiter.api.AfterAll;
-import org.junit.jupiter.api.Assertions;
 import org.junit.jupiter.api.BeforeAll;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.DisplayName;
@@ -44,12 +47,14 @@ import org.springframework.test.web.servlet.MockMvc;
 import org.springframework.test.web.servlet.MvcResult;
 import org.springframework.test.web.servlet.setup.MockMvcBuilders;
 import org.springframework.web.context.WebApplicationContext;
-import org.testcontainers.shaded.org.apache.commons.lang3.builder.EqualsBuilder;
 
 @SpringBootTest(webEnvironment = SpringBootTest.WebEnvironment.RANDOM_PORT)
 @Transactional
 class BookControllerTest {
     protected static MockMvc mockMvc;
+
+    private static final long EXISTING_ID = 1L;
+    private static final long NON_EXISTING_ID = 999L;
 
     @Autowired
     private ObjectMapper objectMapper;
@@ -79,11 +84,6 @@ class BookControllerTest {
         }
     }
 
-    @BeforeEach
-    void setUp() {
-        MockitoAnnotations.openMocks(this);
-    }
-
     @AfterAll
     static void afterAll(
             @Autowired DataSource dataSource
@@ -102,45 +102,25 @@ class BookControllerTest {
         }
     }
 
+    @BeforeEach
+    void setUp() {
+        MockitoAnnotations.openMocks(this);
+    }
+
     @WithMockUser(username = "admin", authorities = {"ADMIN"})
     @Test
     @DisplayName("Create a new Book")
     void createBook_ValidRequestDto_Success() throws Exception {
         // Given
-        CreateBookRequestDto requestDto = new CreateBookRequestDto();
-        requestDto.setTitle("Test Book 1");
-        requestDto.setAuthor("Test Author");
-        requestDto.setIsbn("767898776678");
-        requestDto.setPrice(BigDecimal.valueOf(49.99));
-        requestDto.setDescription("Some description");
-        requestDto.setCoverImage("Test.jpg");
-        requestDto.setCategoryIds(List.of(1L, 2L));
+        CreateBookRequestDto requestDto = TestUtils.createBookRequestDto();
+        Category categoryFirst = TestUtils.createCategory(1L, "Category First");
+        Category categorySecond = TestUtils.createCategory(2L, "Category Second");
 
-        Category category1 = new Category();
-        category1.setId(1L);
-        Category category2 = new Category();
-        category2.setId(2L);
-
-        Book book = new Book();
-        book.setTitle(requestDto.getTitle());
-        book.setAuthor(requestDto.getAuthor());
-        book.setIsbn(requestDto.getIsbn());
-        book.setPrice(requestDto.getPrice());
-        book.setDescription(requestDto.getDescription());
-        book.setCoverImage(requestDto.getCoverImage());
-        book.setCategories(new HashSet<>(Arrays.asList(category1, category2)));
-
-        BookDto expected = new BookDto();
-        expected.setId(1L);
-        expected.setTitle(book.getTitle());
-        expected.setAuthor(book.getAuthor());
-        expected.setIsbn(book.getIsbn());
-        expected.setPrice(book.getPrice());
-        expected.setDescription(book.getDescription());
-        expected.setCoverImage(book.getCoverImage());
-        expected.setCategoryIds(List.of(1L, 2L));
+        Book book = TestUtils.createBook(requestDto, categoryFirst, categorySecond);
+        BookDto expected = TestUtils.createBookDto(book, List.of(1L, 2L));
 
         String jsonRequest = objectMapper.writeValueAsString(requestDto);
+
         // When
         MvcResult result = mockMvc.perform(
                         post("/books")
@@ -149,11 +129,46 @@ class BookControllerTest {
                 )
                 .andExpect(status().isCreated())
                 .andReturn();
+
         // Then
         BookDto actual = objectMapper.readValue(
-                result.getResponse().getContentAsString(), BookDto.class
+                result.getResponse().getContentAsString(),
+                BookDto.class);
+        assertEquals(expected.getTitle(), actual.getTitle());
+    }
+
+    @WithMockUser(username = "admin", authorities = {"ADMIN"})
+    @Test
+    @DisplayName("Create a new Book - Invalid Request")
+    void createBook_InvalidRequestDto_BadRequest() throws Exception {
+        // Given
+        CreateBookRequestDto invalidRequestDto = new CreateBookRequestDto();
+        invalidRequestDto.setTitle(null);
+        invalidRequestDto.setAuthor(null);
+        invalidRequestDto.setPrice(null);
+        invalidRequestDto.setCoverImage(null);
+        invalidRequestDto.setIsbn(null);
+        invalidRequestDto.setDescription(null);
+        invalidRequestDto.setCategoryIds(null);
+
+        String jsonRequest = objectMapper.writeValueAsString(invalidRequestDto);
+
+        // When
+        MvcResult result = mockMvc.perform(
+                        post("/books")
+                                .content(jsonRequest)
+                                .contentType(MediaType.APPLICATION_JSON)
+                )
+                .andExpect(status().isBadRequest())
+                .andReturn();
+
+        // Then
+        String errorMessage = result.getResponse().getContentAsString();
+
+        assertTrue(errorMessage.contains(
+                "must not be blank") || errorMessage.contains("must not be null")
         );
-        EqualsBuilder.reflectionEquals(expected, actual, "id");
+        assertTrue(errorMessage.contains("categoryIds must not be empty"));
     }
 
     @WithMockUser(username = "user", authorities = {"USER"})
@@ -161,40 +176,38 @@ class BookControllerTest {
     @DisplayName("Get all books")
     void getAll_GivenBooksInCatalog_ShouldReturnAllBooks() throws Exception {
         // Given
-        BookDto book1 = new BookDto();
-        book1.setId(1L);
-        book1.setTitle("Book Title 1");
-        book1.setAuthor("Author 1");
-        book1.setIsbn("ISBN1234567890");
-        book1.setPrice(BigDecimal.valueOf(19.99));
-        book1.setDescription("Description 1");
-        book1.setCoverImage("cover1.jpg");
-        book1.setCategoryIds(List.of(1L));
+        BookDto bookFirst = TestUtils.createBookDto(
+                1L,
+                "Book Title 1",
+                "Author 1",
+                "ISBN1234567890",
+                BigDecimal.valueOf(19.99),
+                "Description 1",
+                "cover1.jpg",
+                List.of(1L)
+        );
+        BookDto bookSecond = TestUtils.createBookDto(
+                2L,
+                "Book Title 2",
+                "Author 2",
+                "ISBN0987654321",
+                BigDecimal.valueOf(29.99),
+                "Description 2",
+                "cover2.jpg",
+                List.of(1L)
+        );
+        BookDto bookThird = TestUtils.createBookDto(
+                3L,
+                "Book Title 3",
+                "Author 3",
+                "ISBN4546774667",
+                BigDecimal.valueOf(39.99),
+                "Description 3",
+                "cover3.jpg",
+                List.of(1L)
+        );
 
-        BookDto book2 = new BookDto();
-        book2.setId(2L);
-        book2.setTitle("Book Title 2");
-        book2.setAuthor("Author 2");
-        book2.setIsbn("ISBN0987654321");
-        book2.setPrice(BigDecimal.valueOf(29.99));
-        book2.setDescription("Description 2");
-        book2.setCoverImage("cover2.jpg");
-        book2.setCategoryIds(List.of(1L));
-
-        BookDto book3 = new BookDto();
-        book3.setId(3L);
-        book3.setTitle("Book Title 3");
-        book3.setAuthor("Author 3");
-        book3.setIsbn("ISBN4546774667");
-        book3.setPrice(BigDecimal.valueOf(39.99));
-        book3.setDescription("Description 3");
-        book3.setCoverImage("cover3.jpg");
-        book3.setCategoryIds(List.of(1L));
-
-        List<BookDto> expected = new ArrayList<>();
-        expected.add(book1);
-        expected.add(book2);
-        expected.add(book3);
+        List<BookDto> expected = List.of(bookFirst, bookSecond, bookThird);
 
         // When
         MvcResult result = mockMvc.perform(
@@ -205,10 +218,10 @@ class BookControllerTest {
 
         // Then
         BookDto[] actual = objectMapper.readValue(
-                result.getResponse().getContentAsByteArray(), BookDto[].class
-        );
-        Assertions.assertEquals(3, actual.length);
-        Assertions.assertEquals(expected, Arrays.stream(actual).toList());
+                result.getResponse().getContentAsByteArray(),
+                BookDto[].class);
+        assertEquals(3, actual.length);
+        assertEquals(expected, Arrays.stream(actual).toList());
     }
 
     @WithMockUser(username = "user", authorities = {"USER"})
@@ -217,18 +230,34 @@ class BookControllerTest {
     void getBookById_ExistingBook_ReturnsBook() throws Exception {
         // When
         MvcResult result = mockMvc.perform(
-                get("/books/1")
-                        .contentType(MediaType.APPLICATION_JSON))
+                        get("/books/" + EXISTING_ID)
+                                .contentType(MediaType.APPLICATION_JSON))
                 .andExpect(status().isOk())
                 .andReturn();
 
         // Then
         BookDto actual = objectMapper.readValue(
-                result.getResponse().getContentAsByteArray(), BookDto.class
-        );
-        Assertions.assertEquals(1L, actual.getId());
-        Assertions.assertEquals("Book Title 1", actual.getTitle());
-        Assertions.assertEquals("Author 1", actual.getAuthor());
+                result.getResponse().getContentAsByteArray(),
+                BookDto.class);
+        assertEquals(1L, actual.getId());
+        assertEquals("Book Title 1", actual.getTitle());
+        assertEquals("Author 1", actual.getAuthor());
+    }
+
+    @WithMockUser(username = "user", authorities = {"USER"})
+    @Test
+    @DisplayName("Get book by ID - Non Existing Book")
+    void getBookById_NonExistingBook_ReturnsNotFound() throws Exception {
+        // When
+        MvcResult result = mockMvc.perform(
+                        get("/books/" + NON_EXISTING_ID)
+                                .contentType(MediaType.APPLICATION_JSON))
+                .andExpect(status().isNotFound())
+                .andReturn();
+
+        // Then
+        String responseMessage = result.getResponse().getContentAsString();
+        assertTrue(responseMessage.contains("Book not found by id: " + NON_EXISTING_ID));
     }
 
     @WithMockUser(username = "admin", authorities = {"ADMIN"})
@@ -236,32 +265,51 @@ class BookControllerTest {
     @DisplayName("Update a Book")
     void updateBook_ValidRequestDto_Success() throws Exception {
         // Given
-        long bookId = 1L;
-        CreateBookRequestDto requestDto = new CreateBookRequestDto();
+        CreateBookRequestDto requestDto = TestUtils.createBookRequestDto();
         requestDto.setTitle("Updated Book Title");
         requestDto.setAuthor("Updated Author");
-        requestDto.setIsbn("Updated ISBN");
-        requestDto.setPrice(BigDecimal.valueOf(59.99));
-        requestDto.setDescription("Updated description");
-        requestDto.setCoverImage("Updated.jpg");
-        requestDto.setCategoryIds(List.of(1L, 2L));
 
         String jsonRequest = objectMapper.writeValueAsString(requestDto);
+
         // When
         MvcResult result = mockMvc.perform(
-                        put("/books/" + bookId)
+                        put("/books/" + EXISTING_ID)
                                 .content(jsonRequest)
-                                .contentType(MediaType.APPLICATION_JSON)
-                )
+                                .contentType(MediaType.APPLICATION_JSON))
                 .andExpect(status().isOk())
                 .andReturn();
+
         // Then
         BookDto actual = objectMapper.readValue(
-                result.getResponse().getContentAsByteArray(), BookDto.class
+                result.getResponse().getContentAsByteArray(),
+                BookDto.class
         );
-        Assertions.assertEquals("Updated Book Title", actual.getTitle());
-        Assertions.assertEquals("Updated Author", actual.getAuthor());
-        Assertions.assertEquals(BigDecimal.valueOf(59.99), actual.getPrice());
+        assertEquals("Updated Book Title", actual.getTitle());
+        assertEquals("Updated Author", actual.getAuthor());
+    }
+
+    @WithMockUser(username = "admin", authorities = {"ADMIN"})
+    @Test
+    @DisplayName("Update a Book - Non Existing Book")
+    void updateBook_NonExistingBook_ReturnsNotFound() throws Exception {
+        // Given
+        CreateBookRequestDto requestDto = TestUtils.createBookRequestDto();
+        requestDto.setTitle("Updated Book Title");
+        requestDto.setAuthor("Updated Author");
+
+        String jsonRequest = objectMapper.writeValueAsString(requestDto);
+
+        // When
+        MvcResult result = mockMvc.perform(
+                        put("/books/" + NON_EXISTING_ID)
+                                .content(jsonRequest)
+                                .contentType(MediaType.APPLICATION_JSON))
+                .andExpect(status().isNotFound())
+                .andReturn();
+
+        // Then
+        String responseMessage = result.getResponse().getContentAsString();
+        assertTrue(responseMessage.contains("Book not found by id: " + NON_EXISTING_ID));
     }
 
     @WithMockUser(username = "admin", authorities = {"ADMIN"})
@@ -269,9 +317,79 @@ class BookControllerTest {
     @DisplayName("Delete a Book")
     void deleteBook_ExistingBook_Success() throws Exception {
         // When
-        mockMvc.perform(delete("/books/1")
+        mockMvc.perform(delete("/books/" + EXISTING_ID)
                         .contentType(MediaType.APPLICATION_JSON))
                 .andExpect(status().isNoContent());
+    }
+
+    @WithMockUser(username = "user", authorities = {"USER"})
+    @Test
+    @DisplayName("Get books by category ID - Existing Category with Books")
+    void getBooksByCategoryId_ExistingCategoryWithBooks_ReturnsBooks() throws Exception {
+        // Given
+        BookDtoWithoutCategoryIds bookFirst = TestUtils.createBookDtoWithoutCategoryIds(
+                1L,
+                "Book Title 1",
+                "Author 1",
+                "ISBN1234567890",
+                BigDecimal.valueOf(19.99),
+                "Description of Book 1",
+                "cover1.jpg"
+        );
+        BookDtoWithoutCategoryIds bookSecond = TestUtils.createBookDtoWithoutCategoryIds(
+                2L,
+                "Book Title 2",
+                "Author 2",
+                "ISBN0987654321",
+                BigDecimal.valueOf(29.99),
+                "Description of Book 2",
+                "cover2.jpg"
+        );
+        BookDtoWithoutCategoryIds bookThird = TestUtils.createBookDtoWithoutCategoryIds(
+                3L,
+                "Book Title 3",
+                "Author 3",
+                "ISBN4546774667",
+                BigDecimal.valueOf(39.99),
+                "Description of Book 3",
+                "cover3.jpg"
+        );
+
+        List<BookDtoWithoutCategoryIds> books = List.of(bookFirst, bookSecond, bookThird);
+
+        when(bookService.findBooksByCategoryId(EXISTING_ID)).thenReturn(books);
+
+        // When
+        MvcResult result = mockMvc.perform(get("/books/" + EXISTING_ID + "/books")
+                        .contentType(MediaType.APPLICATION_JSON))
+                .andExpect(status().isOk())
+                .andReturn();
+
+        // Then
+        List<BookDtoWithoutCategoryIds> actualBooks = objectMapper.readValue(
+                result.getResponse().getContentAsByteArray(), new TypeReference<>() {});
+
+        assertEquals(3, actualBooks.size(), "Expected book size does not match.");
+        assertEquals("Book Title 1", actualBooks.get(0).getTitle());
+        assertEquals("Book Title 2", actualBooks.get(1).getTitle());
+        assertEquals("Book Title 3", actualBooks.get(2).getTitle());
+    }
+
+    @WithMockUser(username = "user", authorities = {"USER"})
+    @Test
+    @DisplayName("Get books by category ID - Non Existing Category")
+    void getBooksByCategoryId_NonExistingCategory_ReturnsNotFound() throws Exception {
+        when(bookService.findBooksByCategoryId(NON_EXISTING_ID))
+                .thenReturn(Collections.emptyList());
+
+        MvcResult result = mockMvc.perform(get("/books/" + NON_EXISTING_ID + "/books")
+                        .contentType(MediaType.APPLICATION_JSON))
+                .andExpect(status().isNotFound())
+                .andReturn();
+
+        assertNotNull(result.getResolvedException());
+        String expectedMessage = "Category with id " + NON_EXISTING_ID + " not found";
+        assertTrue(result.getResolvedException().getMessage().contains(expectedMessage));
     }
 
     @WithMockUser(username = "user", authorities = {"USER"})
@@ -288,31 +406,8 @@ class BookControllerTest {
         BookDto[] actual = objectMapper.readValue(
                 result.getResponse().getContentAsByteArray(), BookDto[].class
         );
-        Assertions.assertEquals(1, actual.length);
-        Assertions.assertEquals("Book Title 1", actual[0].getTitle());
-        Assertions.assertEquals("Author 1", actual[0].getAuthor());
-    }
-
-    @WithMockUser(username = "user", authorities = {"USER"})
-    @Test
-    @DisplayName("Get books by category ID - Non Existing Category")
-    void getBooksByCategoryId_NonExistingCategory_ReturnsNotFound() throws Exception {
-        // Given
-        long nonExistingCategoryId = 999L;
-
-        when(bookService.findBooksByCategoryId(
-                nonExistingCategoryId)).thenReturn(Collections.emptyList()
-        );
-
-        // When
-        MvcResult result = mockMvc.perform(get("/books/" + nonExistingCategoryId + "/books")
-                        .contentType(MediaType.APPLICATION_JSON))
-                .andExpect(status().isNotFound())
-                .andReturn();
-
-        // Then
-        Assertions.assertNotNull(result.getResolvedException());
-        String expectedMessage = "Category with id " + nonExistingCategoryId + " not found";
-        Assertions.assertTrue(result.getResolvedException().getMessage().contains(expectedMessage));
+        assertEquals(1, actual.length);
+        assertEquals("Book Title 1", actual[0].getTitle());
+        assertEquals("Author 1", actual[0].getAuthor());
     }
 }
